--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
 
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.jackson.property-naming-strategy=SNAKE_CASE
