--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
 
 spring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.properties.hibernate.use_sql_comments = true
+spring.jpa.properties.hibernate.use_sql_comments = true
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
