--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.use_sql_comments = true
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
+
+spring.servlet.multipart.maxFileSize=2MB
+spring.servlet.multipart.maxRequestSize=2MB
