--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/yu?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/yu?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
 
